--- a/Custom.css
+++ b/Custom.css
@@ -1,12 +1,4 @@
 /*--------------------------------------------------------------------------------\
-|    	chat Settings
- \--------------------------------------------------------------------------------*/
-
-#chat .badge-box i {
-    transform: scale(1);
-}
-
-/*--------------------------------------------------------------------------------\
 |		Backgrounds log after color
  \--------------------------------------------------------------------------------*/
 
@@ -25,7 +17,7 @@
 }
 
 /*--------------------------------------------------------------------------------\
-|		welcome & log
+|		welcome & log & chat
  \--------------------------------------------------------------------------------*/
 
 #chat .cm.welcome {
@@ -168,4 +160,65 @@
 #chat .cm.mention .msg {
     /*fix RCS*/
     background: none ;
+}
+
+/*--[BOT]--*/
+
+#chat .cm.emote {
+    background: linear-gradient(hsla(219, 100%, 20%, 0.8), hsla(219, 100%, 10%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) !important;
+    border-left: none !important;
+    text-align: left;
+    box-shadow: inset 0 0 0 1px hsla(220, 100%, 50%, 0.5);
+    border: none !important;
+}
+
+#chat .cm.emote .un,
+#chat .cm.emote .timestamp {
+    color: hsl(210, 100%, 60%) !important;
+}
+
+#chat .cm.emote i {
+    display: inline !important;
+}
+
+#chat .emote .text {
+    font-style: oblique !important;
+}
+
+
+/*### [message] ###*/
+
+#chat .cm {
+    animation: fadein 0.2s;
+}
+
+#chat .cm {
+    background: linear-gradient(hsla(220, 10%, 20%, 0.5), hsla(220, 10%, 15%, 0.5));
+    box-shadow: inset 1px 1px 0 hsla(220, 10%, 20%, 0.8);
+}
+
+#chat .cm.message:nth-child(odd) {
+    background: linear-gradient(hsla(220, 10%, 10%, 0.5), hsla(220, 10%, 12%, 0.5));
+    box-shadow: inset 1px 1px 0 hsla(220, 10%, 5%, 0.8);
+    color: #ccc;
+}
+
+#chat .cm.message .timestamp {
+    color: #818285;
+}
+
+#chat .cm .badge-box {
+    background: transparent !important;
+}
+
+#chat .cm .delete-button {
+    border-radius: 4px;
+    background: linear-gradient(hsl(0, 0%, 30%), hsl(0, 0%, 40%));
+    box-shadow: inset 0 0 0 1px hsl(0, 0%, 50%);
+}
+
+#chat .cm .delete-button:hover {
+    background: linear-gradient(hsl(205, 100%, 40%), hsl(205, 100%, 30%));
+    box-shadow: inset 0 0 10px 1px hsla(0, 0%, 100%, 0.4);
+    color: #fff;
 }
