--- a/Users.css
+++ b/Users.css
@@ -199,6 +199,32 @@
     font-size: 11px;
 }
 
+#user-rollover.id-29497090 .meta:before {
+    content: url("https://i.imgur.com/lVc7TDE.jpg?1");
+    top: 130px;
+    left: 109px;
+    position: absolute;
+}
+
+#user-rollover.id-29497090 .meta:after {
+    content: 'Christmas Event Designer 2018-2019';
+    color: #b9290f;
+    position: absolute;
+    top: 130px;
+    left: 130px;
+} 
+
+#user-rollover.id-29497090 .level:after {
+    background-image: url(https://i.imgur.com/a2zR8CP.png);
+    background-repeat: no-repeat;
+    content: "Fear Foxy";
+    display: inline-block;
+    color: #ff0000;
+    font-weight: bold;
+    margin: 0px 0px 0 14px;
+    padding-left: 19px;
+}
+
 /* D0RIT0S */
 
 #user-lists .list .user.id-3905933 .name:after, #user-rollover.id-3905933 .meta .username:after, #chat [data-cid^='3905933-'] .un:after {
