--- a/Users.css
+++ b/Users.css
@@ -267,3 +267,30 @@
     color: #ccc;
     font-size: 11px;
 }
+
+/* Chillout Susan */
+
+#user-lists .list .user.id-4849359 .name:after, #user-rollover.id-4849359 .meta .username:after, #chat [data-cid^='4849359-'] .un:after {
+    content: "Helper/Developer/ccs";
+    margin-left: 5px;
+    background: rgba(0, 0, 0, .5);
+    padding: 0px 5px;
+    border: 2px solid #ff0000;
+    border-radius: 5px;
+    color: #ccc;
+    font-size: 11px;
+}
+
+
+/* MaluRose */
+
+#user-lists .list .user.id-13659086 .name:after, #user-rollover.id-13659086 .meta .username:after, #chat [data-cid^='13659086-'] .un:after {
+    content: "Helper";
+    margin-left: 5px;
+    background: rgba(0, 0, 0, .5);
+    padding: 0px 5px;
+    border: 2px solid #ff0000;
+    border-radius: 5px;
+    color: #ccc;
+    font-size: 11px;
+}
