--- a/Bot.css
+++ b/Bot.css
@@ -1,4 +1,4 @@
-/* Gynny */
+/* F E A R F O X Y | Bot */
 
 #user-lists .list .user.id-20168147 .name:after, #user-rollover.id-20168147 .meta .username:after, #chat [data-cid^='20168147-'] .un:after {
     content: "Room Bot";
