--- a/Promoter.css
+++ b/Promoter.css
@@ -50,6 +50,6 @@
     background: url("https://i.imgur.com/WqmVmlZ.png") ;
 }
 
-.user.id-3669054 .icon-chat-promoter {
+#user-lists .list.room .user.id-3669054 .icon-chat-promoter {
     background: url("https://i.imgur.com/LZgFvsZ.png");
 }
