--- a/FFY.css
+++ b/FFY.css
@@ -1,9 +1,9 @@
-@import url("https://rawgit.com/F0xYG0d/FFYCss/master/Bot.css");
-@import url("https://rawgit.com/F0xYG0d/FFYCss/master/Custom%20PP.css");
-@import url("https://rawgit.com/F0xYG0d/FFYCss/master/Custom.css");
-@import url("https://rawgit.com/F0xYG0d/FFYCss/master/Developer.css");
-@import url("https://rawgit.com/F0xYG0d/FFYCss/master/Owner.css");
-@import url("https://rawgit.com/F0xYG0d/FFYCss/master/Sponsor.css");
+@import url("https://raw.githack.com/F0xYG0d/FFYCss/master/Bot.css");
+@import url("https://raw.githack.com/F0xYG0d/FFYCss/master/Custom PP.css");
+@import url("https://raw.githack.com/F0xYG0d/FFYCss/master/Custom.css");
+@import url("https://raw.githack.com/F0xYG0d/FFYCss/master/Developer.css");
+@import url("https://raw.githack.com/F0xYG0d/FFYCss/master/Owner.css");
+@import url("https://raw.githack.com/F0xYG0d/FFYCss/master/Sponsor.css");
 @import url("https://rawgit.com/F0xYG0d/FFYCss/master/Staff.css");
 @import url("https://rawgit.com/F0xYG0d/FFYCss/master/Supporters.css");
 @import url("https://rawgit.com/F0xYG0d/FFYCss/master/Theme.css");
