--- a/FFY.css
+++ b/FFY.css
@@ -9,6 +9,6 @@
 @import url("https://raw.githack.com/F0xYG0d/FFYCss/master/Theme.css");
 @import url("https://raw.githack.com/F0xYG0d/FFYCss/master/Users.css");
 @import url("https://raw.githack.com/F0xYG0d/FFYCss/master/Vip.css");
-@import url("https://rawgit.com/F0xYG0d/FFYCss/master/WAM.css");
-@import url("https://rawgit.com/F0xYG0d/FFYCss/master/Promoter.css");
-@import url("https://rawgit.com/F0xYG0d/FFYCss/master/Brand%20Ambassador.css");
+@import url("https://raw.githack.com/F0xYG0d/FFYCss/master/WAM.css");
+@import url("https://raw.githack.com/F0xYG0d/FFYCss/master/Promoter.css");
+@import url("https://raw.githack.com/F0xYG0d/FFYCss/master/Brand Ambassador.css");
