--- a/Custom.css
+++ b/Custom.css
@@ -9,7 +9,7 @@
     font-size: 11px;
     width: 300px;
     box-sizing: border-box;
-    content: "☯F E A R F O X Y☯™ | PlugThemed - Blue: V 3.7.3.2!";
+    content: "☯F E A R F O X Y☯™ | PlugThemed - red: V 4.8.3.3!";
     font-weight: bold;
     padding: 5px;
     background-color: rgb(255, 0, 0);
