--- a/Theme.css
+++ b/Theme.css
@@ -39,7 +39,7 @@
 
 #rcs-style-anchor-1 {
     background-color: rgba(0, 0, 0, 0.9) ;
-    background-image: url(https://cdn.discordapp.com/attachments/502505905443831826/516009457403166743/Logopit_1543096624227.png);
+    content: '31 december new event, new year! :D 11:00pm begins event.';
     border-radius: 5px;
     border: 3px solid #ff0000;
     position: absolute;
