--- a/Users.css
+++ b/Users.css
@@ -352,10 +352,10 @@
     font-size: 11px;
 }
 
-/* Gerten1 */
+/* Gertuk1 */
 
 #user-lists .list .user.id-21878762 .name:after, #user-rollover.id-21878762 .meta .username:after, #chat [data-cid^='21878762-'] .un:after {
-    content: "Helper";
+    content: "Helper/Moderator";
     margin-left: 5px;
     background: rgba(0, 0, 0, .5);
     padding: 0px 5px;
