--- a/Theme.css
+++ b/Theme.css
@@ -64,7 +64,7 @@
     top: 8px;
     left: 8px;
     font-family: 'fontawesome';
-    content: '31 december new event, new year! :D 11:00pm begins event.';
+    content: 'Welcome to FFY Community 2019!';
     font-size: 16px;
     color: #21b1af;
 }
