--- a/Theme.css
+++ b/Theme.css
@@ -81,7 +81,7 @@
 /* About */
 
 #preview-about {
-    background: #ff0000;
+    background: #000000;
 }
 
 #preview-about .top-about {
@@ -95,7 +95,7 @@
 }
 
 #preview-about .top-profile .top-profile__image {
-    border: 3px solid #21b1af;
+    border: 3px solid #000000;
 }
 
 #preview-about .flex-component .item, #preview-about .flex-component.text .item-text, #preview-about .about-content .long-description p {
@@ -103,13 +103,13 @@
 }
 
 #preview-about .top-profile .follow.white {
-    background: linear-gradient(hsl(205, 100%, 40%), hsl(205, 100%, 30%));
-    color: #21b1af;
+    background: linear-gradient(hsl(255, 100%, 40%), hsl(255, 100%, 30%));
+    color: #ff0000;
     padding-left: 20px;
 }
 
 #preview-about .top-profile .follow:hover {
-    color: #ff0000;
+    color: #000000;
 }
 
 #preview-about .top-profile .share {
@@ -117,7 +117,7 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     text-align: center;
-    background: linear-gradient(hsl(205, 100%, 40%), hsl(205, 100%, 30%));
+    background: linear-gradient(hsl(255, 100%, 40%), hsl(255, 100%, 30%));
     color: #ff0000;
     white-space: nowrap;
     border: 0;
@@ -596,7 +596,7 @@
 
 .btn-no-dj-primary.btn-no-dj-secondary__bottom,
 .btn-no-dj-secondary.btn-no-dj-secondary__bottom {
-  border: 3px solid white;
+  border: 3px solid red;
   border-radius: 100px;
   background-color: rgba(255, 25, 25, 0.5);
 }
