--- a/Theme.css
+++ b/Theme.css
@@ -537,6 +537,98 @@
     background: linear-gradient(to left bottom, rgba(255, 25, 25, 5), #000);
 }
 
+.plugdjfont.icon-list {
+  display: none;
+}
+
+@keyframes voteslide {
+  0% {
+    margin-top: 15px;
+    opacity: 0;
+  }
+  25% {
+    margin-top: 20px;
+  }
+  75% {
+    margin-top: 25px;
+  }
+  100% {
+    margin-top: 30px;
+  }
+}
+
+@keyframes otherway {
+  0% {
+    margin-top: 30px;
+  }
+  25% {
+    margin-top: 25px;
+  }
+  75% {
+    margin-top: 20px;
+  }
+  100% {
+    margin-top: 15px;
+    opacity: 0;
+  }
+}
+
+.room-controls--desktop__item:hover .room-controls--desktop__item-value {
+  display: block;
+  animation: voteslide 0.5s;
+  animation-fill-mode: forwards;
+}
+
+.room-controls--desktop__item .room-controls--desktop__item-value {
+  animation: otherway 0.5s;
+  animation-fill-mode: forwards;
+}
+
+.room-controls--desktop__item-value {
+  display: block;
+  font-size: 14px !important;
+  padding-top: 4px;
+  border-color: white;
+  border-width: 3px;
+  border-style: solid;
+  border-radius: 100px;
+  width: 27px;
+  height: 22px;
+  margin-left: 15px;
+  margin-top: -25px;
+  background-color: #40100c;
+}
+
+.community .room-controls--desktop__item .btn-like.clicked::before {
+  border-radius: 200px;
+  background-color: rgba(33, 230, 0, 0.2) !important;
+}
+
+.community .room-controls--desktop__item .btn-meh.clicked::before {
+  border-radius: 200px;
+  background-color: rgba(255, 109, 40, 0.2) !important;
+}
+
+.community .room-controls--desktop__item .btn-playlist.clicked::before {
+  border-radius: 200px;
+  background-color: rgba(0, 235, 255, 0.2);
+}
+
+.btn-no-dj-primary.btn-no-dj-secondary__bottom,
+.btn-no-dj-secondary.btn-no-dj-secondary__bottom {
+  border: 3px solid white;
+  border-radius: 100px;
+  background-color: rgba(64, 16, 12, 0.9);
+}
+.btn-no-dj-secondary:hover {
+  background-color: rgba(94, 66, 62, 0.9) !important;
+} /*ddddd*/
+/* TO LEFT BOTTOM > #000 */
+
+#footer-user .info, .communities .grid .cell .favorite {
+    background: linear-gradient(to left bottom, rgba(255, 25, 25, 5), #000);
+}
+
 .room-controls--desktop__item:hover .room-controls--desktop__item-value {
   display: block;
   animation: voteslide 0.5s;
@@ -570,8 +662,10 @@
 
 .community .room-controls--desktop__item .btn-meh.clicked::before {
   border-radius: 200px;
+
   background-color: rgba(255, 25, 25, 0.5) !important;
 }
+
 .community .room-controls--desktop__item .btn-playlist.clicked::before {
   border-radius: 200px;
   background-color: rgba(255, 25, 25, 0.5);
