--- a/Brand Ambassador.css
+++ b/Brand Ambassador.css
@@ -36,5 +36,5 @@
 }
 
 #user-lists .list.room .user.id-3148591 .icon-chat-ambassador {
-    background: url("https://i.imgur.com/xQsRBMB.png");
+    background: url("https://i.imgur.com/IO84f0g.png");
 }
