--- a/Brand Ambassador.css
+++ b/Brand Ambassador.css
@@ -1,10 +1,10 @@
 /*#####[BA]#####*/
 
+/* Bloom */
+
 .icon-chat-ambassador+span {
     color: #9C0 ;
 }
-
-/* Bloom <3 */
 
 #user-rollover.id-3148591>.info>.role span {
     text-indent: -9999px;
