--- a/Bot.css
+++ b/Bot.css
@@ -5,7 +5,7 @@
     margin-left: 5px;
     background: rgba(0, 0, 0, .3);
     padding: 0px 5px;
-    border: 1px solid #21b1af;
+    border: 1px solid #ff0000;
     border-radius: 5px;
     color: #ccc;
     font-size: 11px;
