--- a/Promoter.css
+++ b/Promoter.css
@@ -155,3 +155,54 @@
 #user-lists .list.room .user.id-5541888 .icon-chat-promoter {
     background: url("https://i.imgur.com/LZgFvsZ.png");
 }
+
+/*#####[Bouncers]#####*/
+
+/* Freyr */
+
+.icon-chat-bouncer {
+    background: url("https://i.imgur.com/srpiwR1.png");
+}
+
+.icon-chat-bouncer+span, #user-lists .group.bouncer~.user span, #dialog-user-role .role-menu .menu ul .bouncer span {
+    color: #0078c7;
+}
+
+#user-lists .group.bouncer {
+    color: #0078c7;
+    background: linear-gradient(to right, hsla(360, 100%, 30%, 0.5), hsla(360, 100%, 40%, 0.5)) ;
+    top: 1px;
+}
+
+#user-rollover.id-5266523>.info>.role span {
+    text-indent: -9999px;
+    line-height: 0;
+}
+
+#user-rollover.id-5266523>.info>.role span:after {
+    text-indent: 0;
+    content: 'Bouncer';
+    display: block;
+    line-height: initial;
+    color: #0078c7;
+}
+
+#user-rollover.id-5266523>.info>.role:hover span:after {
+    text-indent: 0;
+    content: 'Promoter';
+    display: block;
+    line-height: initial;
+    color: #359422;
+}
+
+#user-rollover.id-5266523>.info>.role .icon {
+    background: url("https://i.imgur.com/srpiwR1.png") ;
+}
+
+#user-rollover.id-5266523>.info>.role:hover .icon {
+    background: url("https://i.imgur.com/LZgFvsZ.png") ;
+}
+
+#user-lists .list.room .user.id-5266523 .icon-chat-promoter {
+    background: url("https://i.imgur.com/LZgFvsZ.png");
+}
