--- a/Brand Ambassador.css
+++ b/Brand Ambassador.css
@@ -95,7 +95,7 @@
 
 #user-rollover.id-4559972>.info>.role span:after {
     text-indent: 0;
-    content: 'Resident DJ
+    content: 'Resident DJ';
     display: block;
     line-height: initial;
     color: #db182e;
