--- a/Promoter.css
+++ b/Promoter.css
@@ -12,7 +12,7 @@
 
 #user-lists .group.host {
     color: #0078c7;
-    background: linear-gradient(to right, hsla(360, 100%, 30%, 0.5), hsla(360, 100%, 40%, 0.5)) ;
+    background: linear-gradient(to right, hsla(360, 100%, 30%, 0.5), hsla(360, 100%, 40%, 0.5));
     top: 1px;
 }
 
@@ -43,18 +43,18 @@
 }
 
 #user-rollover.id-3669054>.info>.role .icon {
-    background: url("https://i.imgur.com/WqmVmlZ.png") ;
+    background: url("https://i.imgur.com/WqmVmlZ.png");
 }
 
 #user-rollover.id-3669054>.info>.role:hover .icon {
-    background: url("https://i.imgur.com/LZgFvsZ.png") ;
+    background: url("https://i.imgur.com/LZgFvsZ.png");
 }
 
 #user-lists .list.room .user.id-3669054 .icon-chat-promoter {
     background: url("https://i.imgur.com/LZgFvsZ.png");
 }
 
-/*#####[Co-Hosts]#####*/
+/*#####[CoHosts]#####*/
 
 /* -Xam. */
 
@@ -68,7 +68,7 @@
 
 #user-lists .group.cohost {
     color: #0078c7;
-    background: linear-gradient(to right, hsla(360, 100%, 30%, 0.5), hsla(360, 100%, 40%, 0.5)) ;
+    background: linear-gradient(to right, hsla(360, 100%, 30%, 0.5), hsla(360, 100%, 40%, 0.5));
     top: 1px;
 }
 
@@ -79,7 +79,7 @@
 
 #user-rollover.id-5485122>.info>.role span:after {
     text-indent: 0;
-    content: 'Co-Host';
+    content: 'CoHost';
     display: block;
     line-height: initial;
     color: #0078c7;
@@ -94,11 +94,11 @@
 }
 
 #user-rollover.id-5485122>.info>.role .icon {
-    background: url("https://i.imgur.com/WqmVmlZ.png") ;
+    background: url("https://i.imgur.com/WqmVmlZ.png");
 }
 
 #user-rollover.id-5485122>.info>.role:hover .icon {
-    background: url("https://i.imgur.com/LZgFvsZ.png") ;
+    background: url("https://i.imgur.com/LZgFvsZ.png");
 }
 
 #user-lists .list.room .user.id-5485122 .icon-chat-promoter {
@@ -119,7 +119,7 @@
 
 #user-lists .group.manager {
     color: #0078c7;
-    background: linear-gradient(to right, hsla(360, 100%, 30%, 0.5), hsla(360, 100%, 40%, 0.5)) ;
+    background: linear-gradient(to right, hsla(360, 100%, 30%, 0.5), hsla(360, 100%, 40%, 0.5));
     top: 1px;
 }
 
@@ -145,11 +145,11 @@
 }
 
 #user-rollover.id-5541888>.info>.role .icon {
-    background: url("https://i.imgur.com/xQsRBMB.png") ;
+    background: url("https://i.imgur.com/xQsRBMB.png");
 }
 
 #user-rollover.id-5541888>.info>.role:hover .icon {
-    background: url("https://i.imgur.com/LZgFvsZ.png") ;
+    background: url("https://i.imgur.com/LZgFvsZ.png");
 }
 
 #user-lists .list.room .user.id-5541888 .icon-chat-promoter {
@@ -170,7 +170,7 @@
 
 #user-lists .group.bouncer {
     color: #0078c7;
-    background: linear-gradient(to right, hsla(360, 100%, 30%, 0.5), hsla(360, 100%, 40%, 0.5)) ;
+    background: linear-gradient(to right, hsla(360, 100%, 30%, 0.5), hsla(360, 100%, 40%, 0.5));
     top: 1px;
 }
 
@@ -196,11 +196,11 @@
 }
 
 #user-rollover.id-5266523>.info>.role .icon {
-    background: url("https://i.imgur.com/srpiwR1.png") ;
+    background: url("https://i.imgur.com/srpiwR1.png");
 }
 
 #user-rollover.id-5266523>.info>.role:hover .icon {
-    background: url("https://i.imgur.com/LZgFvsZ.png") ;
+    background: url("https://i.imgur.com/LZgFvsZ.png");
 }
 
 #user-lists .list.room .user.id-5266523 .icon-chat-promoter {
