--- a/Promoter.css
+++ b/Promoter.css
@@ -79,7 +79,7 @@
 
 #user-rollover.id-5485122>.info>.role span:after {
     text-indent: 0;
-    content: 'CoHost';
+    content: 'Co-Host';
     display: block;
     line-height: initial;
     color: #0078c7;
